fixed a bug with icon paths when the Eclipse installation was in a directory with a space in the path